update Lesson 11 (web.html)

--- a/CSS/Lesson11/web.html
+++ b/CSS/Lesson11/web.html
@@ -12,12 +12,31 @@
     <header>
         <a href="" class="logo">ITStep</a>
         <button class="menu-toggler">
+            <!--<span></span>
+            <span></span>
+            <span></span>-->
             <hr><hr><hr>
         </button>
     </header>
 
     <main>
-        <div class="background"></div>
+        <div class="container">
+            <div class="background">
+                <div class="info">
+                    <img src="./avatar.jpg" alt="Edgar Zhiznevski">
+                    <h1>Edgar Zhiznevski</h1>
+                    <p>Full-stack PHP/Javascript web developer</p>
+                    <div class="buttons">
+                        <button class="button_fixed" title="Call me">
+                            <i class=""></i>
+                        </button>
+                        <button class="button_fixed" title="Email me">
+                            <i class=""></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
