--- a/CSS/Lesson6/homework3_1.html
+++ b/CSS/Lesson6/homework3_1.html
@@ -7,33 +7,33 @@
     <link rel="stylesheet" href="./css/homework3_1.css">
 </head>
 <body>
-    <div align="center" class="background">
+    <div class="background">
         <div class="background2">
-            <div align="left" class="row">
+            <div class="row">
                 <div>
                     <span class="number">1.</span>
                     <span class="item">Apple</span>    
                 </div>
             </div>
-            <div align="left" class="row">
+            <div class="row">
                 <div>
                     <span class="number">2.</span>
                     <span class="item">Orange</span>       
                 </div>
             </div>
-            <div align="left" class="row">
+            <div class="row">
                 <div>
                     <span class="number">3.</span>
                     <span class="item">Pineapple</span>              
                 </div>
             </div>
-            <div align="left" class="row">
+            <div class="row">
                 <div>
                     <span class="number">4.</span>
                     <span class="item">Pear</span>      
                 </div>
             </div>
-            <div align="left" class="row">
+            <div class="row">
                 <div>
                     <span class="number">5.</span>
                     <span class="item">Cherry</span>      
