--- a/CSS/Lesson6/homework3_2.html
+++ b/CSS/Lesson6/homework3_2.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./css/homework3_2.css">
 </head>
 <body>
-    <div align="center" class="background">
+    <div class="background">
         <div class="background2">
-            <h4 align="left">My To Do List</h4>
-            <div align="left" class="rowblue">
+            <h4>My To Do List</h4>
+            <div class="rowblue">
                 <div>
                     <!--<span class="checkbox"><input type="checkbox" id="checkbox1"></span>-->
                     <span class="checkbox">&#x2610;</span>
@@ -18,77 +18,77 @@
                     <span class="marks"><small>&#x2716;</small></span> 
                 </div>
             </div>
-            <div align="left" class="rowgrey">
+            <div class="rowgrey">
                 <div>
                     <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Pay bills</s></span>       
                     <span class="marks"><small>&#x2716;</small></span>       
                 </div>
             </div>
-            <div align="left" class="rowblue">
+            <div class="rowblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Meet John</span> 
                     <span class="marks"><small>&#x2716;</small></span>              
                 </div>
             </div>
-            <div align="left" class="rowlightblue">
+            <div class="rowlightblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Buy eggs</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowgrey">
+            <div class="rowgrey">
                 <div>
                     <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Read a book</s></span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowlightblue">
+            <div class="rowlightblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Organize office</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowblue">
+            <div class="rowblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Eat dinner</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowlightblue">
+            <div  class="rowlightblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Buy apples</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowblue">
+            <div  class="rowblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Meet George</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowlightblue">
+            <div  class="rowlightblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Feed the cat</span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowgrey">
+            <div  class="rowgrey">
                 <div>
                     <span class="checkbox">&#x2611;</span>
                     <span class="task"><s>Write a letter</s></span> 
                     <span class="marks"><small>&#x2716;</small></span>      
                 </div>
             </div>
-            <div align="left" class="rowlightblue">
+            <div  class="rowlightblue">
                 <div>
                     <span class="checkbox">&#x2610;</span>
                     <span class="task">Run 1 km</span> 
