--- a/CSS/Lesson6/homework3_3.html
+++ b/CSS/Lesson6/homework3_3.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./css/homework3_3.css">
 </head>
 <body>
-    <div align="center" class="background">
-        <div align="left" class="background2">
-            <h3 align="left"><strong>TAG</strong></h3>
-            <h4 align="left">&#91;t&#230;g&#93;</h4>
+    <div class="background">
+        <div class="background2">
+            <h3><strong>TAG</strong></h3>
+            <h4>&#91;t&#230;g&#93;</h4>
 
             <!--Список описаний-->
             <dl>
