update Lesson14 (flex-form)

--- a/CSS/Lesson11/web.html
+++ b/CSS/Lesson11/web.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="background">
                 <div class="info">
-                    <img src="./avatar.jpg" alt="Edgar Zhiznevski">
+                    <img src="../../img/L11_web_avatar.jpg" alt="Edgar Zhiznevski">
                     <h1>Edgar Zhiznevski</h1>
                     <p>Full-stack PHP/Javascript web developer</p>
                     <div class="buttons">
