--- a/CSS/Lesson14_flex/flex.html
+++ b/CSS/Lesson14_flex/flex.html
@@ -10,29 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <!--<div class="first"></div>
+        <div class="first"></div>
         <div class="second"></div>
-        <div class="third"></div>-->
-        <div class="form">
-            <form action="" id="registration_form">
-                    <img src="./bootstrap-logo-shadow.png" alt="">
-                    <h1>Please sign in</h1>
-                    <input type="email" name="email" placeholder="Ваше email" required/> 
-                    <input type="password" name="password"  placeholder="Пароль" required/>
-                    <input type="checkbox"/><label>Remember me</label>
-                    <button type="submit" class="button">Sign in</button>
-                    <p class="copy">&copy; 2017-2025</p>
-            </form>
-        </div>
-
+        <div class="third"></div>
     </div>
-    <!--<nav>
+    <nav>
         <ul>
             <li><a href="">Main</a></li>
             <li><a href="">About us</a></li>
             <li><a href="">Catalog</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
-    </nav>-->
+    </nav>
 </body>
 </html>
