file names update, add pz_2block Lesson 9

--- a/CSS/Lesson9/pz2_1_paragraph.html
+++ b/CSS/Lesson9/pz2_1_paragraph.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paragraph</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-1_paragraph.css">
+    <link rel="stylesheet" href="./pz2_1_paragraph.css">
 </head>
 <body>
     <div class="paragraph">
