--- a/CSS/Lesson9/pz2_2_vMenu.html
+++ b/CSS/Lesson9/pz2_2_vMenu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VerticalMenu</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-2_vMenu.css">
+    <link rel="stylesheet" href="./pz2_2_vMenu.css">
 </head>
 <body>
     <nav class="vMenu">
