--- a/CSS/Lesson9/pz2_3_aLaPietMondriaan.html
+++ b/CSS/Lesson9/pz2_3_aLaPietMondriaan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aLaPietMondriaan</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-3_aLaPietMondriaan.css">
+    <link rel="stylesheet" href="./pz2_3_aLaPietMondriaan.css">
 </head>
 <body>
     <div class="background">
