--- a/CSS/Lesson9/pz2_4_storage.html
+++ b/CSS/Lesson9/pz2_4_storage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warehouse</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-4_storage.css">
+    <link rel="stylesheet" href="./pz2_4_storage.css">
 </head>
 <body>
     <div class="storage">
