--- a/CSS/Lesson9/pz2_7_statistics.html
+++ b/CSS/Lesson9/pz2_7_statistics.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistics</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-7_statistics.css">
+    <link rel="stylesheet" href="./pz2_7_statistics.css">
 </head>
 <body>
     <div class="wrapper">
