--- a/CSS/Lesson9/pz2_6_hMenu.html
+++ b/CSS/Lesson9/pz2_6_hMenu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HorizontalMenu</title>
     <link rel="stylesheet" href="../../normilize.css">
-    <link rel="stylesheet" href="./pz2-6_hMenu.css">
+    <link rel="stylesheet" href="./pz2_6_hMenu.css">
 </head>
 <body>
     <nav class="hMenu">
